--- a/posts/2024/1011.md
+++ b/posts/2024/1011.md
@@ -1,8 +1,11 @@
-## 为博客添加 MetingJS 音乐 [​](#为博客添加-metingjs-音乐)
 
-## 1\. 起因 [​](#_1-起因)
+title: 为博客添加 MetingJS 音乐 
+tags: [建站]
+categories: [技术分享]
+date: 2024-10-22
+description: 因为博客的阅读页更偏向于文档风格，所以就一直在思考该怎么增加阅读体验,加一个音乐播放器是一个不错的选择，刚好发现 [curve](https://github.com/imsyy/vitepress-theme-curve?tab=readme-ov-file) 主题发布，不管是**流畅度**还是**设计感**都非常棒。但是在上手体验一番之后发现可能还是因为刚发布不完善的原因，有长文章加载慢和不支持 `code-group` 的问题，配置与修改的地方也比当前的多得多，更不用说大改主页的样式 （目前的主页还是挺喜欢的），有些太耗时了，所以暂时还是不碰了，看日后的更新情况。于是就有了从 curve 缝一个 Player 组件过来的想法。
+articleGPT: 因为博客的阅读页更偏向于文档风格，所以就一直在思考该怎么增加阅读体验,加一个音乐播放器是一个不错的选择.
 
-因为博客的阅读页更偏向于文档风格，所以就一直在思考该怎么增加阅读体验,加一个音乐播放器是一个不错的选择，刚好发现 [curve](https://github.com/imsyy/vitepress-theme-curve?tab=readme-ov-file) 主题发布，不管是**流畅度**还是**设计感**都非常棒。但是在上手体验一番之后发现可能还是因为刚发布不完善的原因，有长文章加载慢和不支持 `code-group` 的问题，配置与修改的地方也比当前的多得多，更不用说大改主页的样式 （目前的主页还是挺喜欢的），有些太耗时了，所以暂时还是不碰了，看日后的更新情况。于是就有了从 curve 缝一个 Player 组件过来的想法。
 
 ## 2\. 代码 [​](#_2-代码)
 
