--- a/posts/2024/1010.md
+++ b/posts/2024/1010.md
@@ -7,7 +7,7 @@ description: 欢迎使用 Curve 主题，这是你的第一篇文章
 articleGPT: 这是一篇初始化文章，旨在告诉用户一些使用说明和须知。
 references:
   - title: vitepress-theme-curve
-    url: https://github.com/imsyy/vitepress-theme-curve
+    url: https://zddown.icu
 ---
 
 ## Hello
