--- a/posts/2024/1011.md
+++ b/posts/2024/1011.md
@@ -18,9 +18,7 @@ references:
 
 文件：`theme/index.ts`
 
-ts
-
-```
+```ts
 import BlogTheme from '@sugarat/theme'
 import { createPinia } from "pinia";
 import piniaPluginPersistedstate from "pinia-plugin-persistedstate";
@@ -54,9 +52,9 @@ export default {
 
 Player.vue 完整代码
 
-vue
 
-```html
+
+```vue
 <!-- 全局播放器 -->
 <template>
   <div
