--- a/posts/2024/1024.md
+++ b/posts/2024/1024.md
@@ -2,9 +2,9 @@
 title: 服务器部署VitePress 
 tags: [建站]
 categories: [技术分享]
-date: 2024-10-22
-description: 因为博客的阅读页更偏向于文档风格，所以就一直在思考该怎么增加阅读体验,加一个音乐播放器是一个不错的选择
-articleGPT: 因为博客的阅读页更偏向于文档风格，所以就一直在思考该怎么增加阅读体验,加一个音乐播放器是一个不错的选择.
+date: 2024-10-24
+description: 因为博客的阅读页更偏向于文档风格
+articleGPT: 因为博客的阅读页更偏向于文档风格，所以就一直在思考该怎么增加阅读体验
 references:
   - title: 服务器部署VitePress-Dale
     url: https://docs.dalechu.cn/posts/vp_server
