--- a/posts/2024/1024.md
+++ b/posts/2024/1024.md
@@ -3,8 +3,8 @@ title: 服务器部署VitePress
 tags: [建站]
 categories: [技术分享]
 date: 2024-10-24
-description: 因为博客的阅读页更偏向于文档风格
-articleGPT: 因为博客的阅读页更偏向于文档风格，所以就一直在思考该怎么增加阅读体验
+description: 在自己服务器上搭建教程
+articleGPT: 服务器部署VitePress来源Dale，可在在自己服务器上搭建
 references:
   - title: 服务器部署VitePress-Dale
     url: https://docs.dalechu.cn/posts/vp_server
