Vercel部署Twikoo评论系统

--- a/posts/2024/102401.md
+++ b/posts/2024/102401.md
@@ -4,7 +4,7 @@ tags: [建站]
 categories: [技术分享]
 date: 2024-10-24
 description: 在自己Vercel上部署Twikoo评论系统
-articleGPT: 在自己Vercel上部署Twikoo评论系统教程
+articleGPT: 在自己Vercel上部署Twikoo评论系统教程,教程为摘抄可以看懂就好！
 references:
   - title: Vercel部署Twikoo评论系统
     url: https://blog.kevinchu.top/2023/09/19/vercel-deploy-twikoo/
@@ -51,9 +51,9 @@ references:
 ![](https://static.kevinchu.top/blog/public/20230919150108.png)
 
 **(4) 绑定域名**  
-进入`Settings -> Domains`，在此处填写要绑定的域名，并在域名服务商配置中添加cname类型解析记录，可参考[Vercel部署Waline](https://blog.kevinchu.top/2023/07/17/vercel-deploy-waline/)绑定域名过程
+进入`Settings -> Domains`，在此处填写要绑定的域名，并在域名服务商配置中添加cname类型解析记录，
 
-## [](#4-在Hexo-Fluid主题中使用Twikoo（配置Twikoo前端） "4 在Hexo Fluid主题中使用Twikoo（配置Twikoo前端）")4 在Hexo Fluid主题中使用Twikoo（配置Twikoo前端）
+
 
 ## [](#4-1-修改主题配置文件 "4.1 修改主题配置文件")3.1 修改主题配置文件
 
@@ -64,4 +64,4 @@ references:
 
 ## [](#5-总结 "5 总结")4 总结
 
-一番折腾下来，我发现本主题对Twikoo的兼容性似乎更好，但是体验下来还是存在亿点不足。通过Vercel部署的Twikoo不能上传图片，还需要自己配置图床（且支持的图床也不多），访问速度和流畅性也一般。此外，还是感觉Waline的ui更好看一些
+一番折腾下来，通过Vercel部署的Twikoo不能上传图片，还需要自己配置图床（且支持的图床也不多），访问速度和流畅性也一般。此外，还是感觉Waline的ui更好看一些
