--- a/posts/2024/102401.md
+++ b/posts/2024/102401.md
@@ -4,7 +4,7 @@ tags: [建站]
 categories: [技术分享]
 date: 2024-10-24
 description: 在自己Vercel上部署Twikoo评论系统
-articleGPT: 在自己Vercel上部署Twikoo评论系统教程,教程为摘抄可以看懂就好！
+articleGPT: 在自己Vercel上部署Twikoo评论系统教程,教程为摘抄可以看懂就好！,自己亲测成了！！
 references:
   - title: Vercel部署Twikoo评论系统
     url: https://blog.kevinchu.top/2023/09/19/vercel-deploy-twikoo/
@@ -51,15 +51,39 @@ references:
 ![](https://static.kevinchu.top/blog/public/20230919150108.png)
 
 **(4) 绑定域名**  
-进入`Settings -> Domains`，在此处填写要绑定的域名，并在域名服务商配置中添加cname类型解析记录，
+进入`Settings -> Domains`，在此处填写要绑定的域名，并在域名服务商配置中添加cname类型解析记录，vercel自带域名被墙，所以你得绑定域名!
 
 
 
-## [](#4-1-修改主题配置文件 "4.1 修改主题配置文件")3.1 修改主题配置文件
+## [](#4-1-修改主题配置文件 "4.1 修改主题配置文件")3.1 修改主题配置文件，以本博客为例，其他得差不多！
 
 编辑主题配置文件，修改Twikoo评论相关配置，envId为部署的访问地址（或绑定域名），基于vercel部署`region`和`path`不必填写
 
-<table><tbody><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br><span class="line">6</span><br><span class="line">7</span><br><span class="line">8</span><br></pre></td><td class="code"><pre><code class="hljs yml"><span class="hljs-comment"># Twikoo</span><br><span class="hljs-comment"># 基于腾讯云开发</span><br><span class="hljs-comment"># Based on Tencent CloudBase</span><br><span class="hljs-comment"># See: https://twikoo.js.org</span><br><span class="hljs-attr">twikoo:</span><br>  <span class="hljs-attr">envId:</span> {<span class="hljs-string">your</span> <span class="hljs-string">twikoo</span> <span class="hljs-string">url</span>}<br>  <span class="hljs-attr">region:</span> <br>  <span class="hljs-attr">path:</span> <br></code></pre></td></tr></tbody></table>
+``` shell
+// 评论
+  comment: {
+    enable: true,
+    // 评论系统选择
+    // artalk / twikoo
+    type: "twikoo",
+    // artalk
+    // https://artalk.js.org/
+    artalk: {
+      site: "",
+      server: "",
+    },
+    // twikoo
+    // https://twikoo.js.org/
+    twikoo: {
+      // 必填，若不想使用 CDN，可以使用 pnpm add twikoo 安装并引入
+      js: "https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/twikoo/1.6.39/twikoo.all.min.js",
+      envId: "你得域名/",
+      // 环境地域，默认为 ap-shanghai，腾讯云环境填 ap-shanghai 或 ap-guangzhou；Vercel 环境不填
+      region: "",
+      lang: "zh-CN",
+    },
+  },
+```
 
 
 ## [](#5-总结 "5 总结")4 总结
