--- a/posts/2024/行测知识模块清单.md
+++ b/posts/2024/行测知识模块清单.md
@@ -1,3 +1,16 @@
+---
+title: 行测知识模块清单
+tags: [公务员考试]
+categories: [经验分享]
+date: 2024-10-25
+description: 行测考试虽然众说纷纭，有感觉难的，有感觉简单的。但其考察的本质就是应试学习能力。简单来讲就是做题能力.
+articleGPT: 行测考试虽然众说纷纭，有感觉难的，有感觉简单的。但其考察的本质就是应试学习能力。简单来讲就是做题能力.和几个朋友深入聊了下各自的行测学习、做题、考试的心得发现：60 分、70 分、80 都是一道坎，并得出如下的建议
+references:
+  - title: 行测知识模块清单
+    url: https://github.com/miss-mumu/developer2gwy
+---
+
+
 > 整理：李萍
 >
 > 作者：李萍、张华、李雷、韩梅梅
