--- a/posts/2024/申论知识模块清单.md
+++ b/posts/2024/申论知识模块清单.md
@@ -1,3 +1,14 @@
+---
+title: 申论知识模块清单
+tags: [公务员考试]
+categories: [经验分享]
+date: 2024-10-25
+description: 申论的考试虽说是主观部分，但也是有迹可循的。对于单一题、复合题、公文题，大多都是按点给分。大作文可能比较主观，只要框架结构完整，语句通顺，字迹清晰。大多能给中等成绩，25分左右。
+articleGPT: 申论的考试虽说是主观部分，但也是有迹可循的。对于单一题、复合题、公文题，大多都是按点给分。大作文可能比较主观，只要框架结构完整，语句通顺，字迹清晰。大多能给中等成绩，25分左右。也就是说，申论100分，至少70分，是有一定的标准，能够通过备考学习把握住的
+references:
+  - title: 申论知识模块清单
+    url: https://github.com/miss-mumu/developer2gwy
+---
 >整理：兴邦
 >
 >作者：任傅躬
