--- a/posts/2024/公务员工资福利待遇组成.md
+++ b/posts/2024/公务员工资福利待遇组成.md
@@ -1,3 +1,14 @@
+---
+title: 公务员工资福利待遇组成
+tags: [公务员考试]
+categories: [经验分享]
+date: 2024-10-25
+description: 公务员或者体制在编人员，工资福利待遇大多由如下几部分组成：
+articleGPT: 公务员的基本工资，主要由职务工资 + 级别工资 + 工作津贴 + 生活津贴组成。
+references:
+  - title: 公务员工资福利待遇组成
+    url: https://github.com/miss-mumu/developer2gwy
+---
 > 整理：李萍
 >
 > 作者：李萍、张华、李雷、韩梅梅
