--- a/posts/2024/102700.md
+++ b/posts/2024/102700.md
@@ -3,8 +3,8 @@ title:主题标签使用
 tags:[建站]
 categories:[技术分享]
 date:2024-10-27
-description:简单介绍下主题支持的标签写法
-articleGPT:简单介绍下主题支持的标签写法，其中一部分为 `VitePress` 默认支持的标签，同时为了保持主题的简洁和统一性，仅支持一些基础的标签，若有额外或更高级的需求，可通过自定义组件实现，也可参考 `VitePress` 文档中的 [高级配置](https://blog.imsyy.top/redirect?url=aHR0cHM6Ly92aXRlcHJlc3MuZGV2L3poL2d1aWRlL21hcmtkb3duI2FkdmFuY2VkLWNvbmZpZ3VyYXRpb24=) 来实现。
+description: 简单介绍下主题支持的标签写法
+articleGPT: 简单介绍下主题支持的标签写法，其中一部分为 `VitePress` 默认支持的标签，同时为了保持主题的简洁和统一性，仅支持一些基础的标签，若有额外或更高级的需求，可通过自定义组件实现，
 references:
   - title: Curve-主题标签使用
     url: https://blog.imsyy.top/posts/2024/0307
