--- a/posts/2024/102700.md
+++ b/posts/2024/102700.md
@@ -1,14 +1,15 @@
 ---
-title:主题标签使用
-tags:[建站]
-categories:[技术分享]
-date:2024-10-27
+title: 行测知识模块清单
+tags: [建站]
+categories: [技术分享]
+date: 2024-10-27
 description: 简单介绍下主题支持的标签写法
-articleGPT: 简单介绍下主题支持的标签写法，其中一部分为 `VitePress` 默认支持的标签，同时为了保持主题的简洁和统一性，仅支持一些基础的标签，若有额外或更高级的需求，可通过自定义组件实现，
+articleGPT: 简单介绍下主题支持的标签写法，其中一部分为 `VitePress` 默认支持的标签，同时为了保持主题的简洁和统一性，仅支持一些基础的标签，若有额外或更高级的需求，可通过自定义组件实现
 references:
-  - title: Curve-主题标签使用
+  - title: 行测知识模块清单
     url: https://blog.imsyy.top/posts/2024/0307
 ---
+
 
 
 ## 基础标签 [​](#基础标签)
